--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,43 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if flash[:notice] %>
+      <div class="notification is-success is-light">
+        <%= notice %>
+      </div>
+    <% end %>
+    <% if flash[:alert] %>
+      <div class="notificatoiin is-danger is-light">
+        <%= alert %>
+      </div>
+    <% end %>
+
+   <nav class="navbar has-background-success-dark">
+     <div class="navbar-brand">
+      <%= link_to root_path, class: "navbar-item" do %>
+        <h1 class="title is-5 has-text-light">MembersOnly</h1>
+      <% end %>
+
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasic">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+     </div>
+
+     <div class="navbar-menu" id="navbarBasic">
+       <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <%= link_to "New Post",
+                        new_post_path,
+                        class: "button" %>
+          </div>
+        </div>
+       </div>
+     </div>
+   </nav>
+
 
     <%= yield %>
   </body>
