--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,28 +1,39 @@
-<h1>New Post</h1>
+<div class="section">
+  <div class="columns is-mobile">
+    <div class="column is-half is-offset-one-quarter">
+      <h1 class="title is-2">New Post</h1>
 
-<% if @post.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@post.errors.count, "error") %> prohibited this article
-    from being saved: </h2>
+      <% if @post.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@post.errors.count, "error") %> prohibited this article
+          from being saved: </h2>
 
-    <ul>
-      <% @post.errors.each do |error| %>
-        <li><%= error.full_message %></li>
+          <ul>
+            <% @post.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
       <% end %>
-    </ul>
+
+
+      <%= form_with model: @post do |form| %>
+        <div class="field">
+          <%= form.label(:title, class: "label") %>
+          <div class="control">
+            <%= form.text_field(:title, class: "input") %>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= form.label(:body, class: "label") %>
+          <%= form.text_area(:body, class: "textarea") %>
+        </div>
+        <%= form.submit(class: "button has-background-success-dark has-text-light") %>
+      <% end %>
+
+      <br>
+      <%= link_to "Index", posts_path %>
+    </div>
   </div>
-<% end %>
-
-
-<%= form_with model: @post do |form| %>
-  <%= form.label(:title) %>
-  <br>
-  <%= form.text_field(:title) %>
-  <br>
-  <%= form.label(:body) %>
-  <br>
-  <%= form.text_area(:body, size: "60x10") %>
-  <%= form.submit %>
-<% end %>
-
-<%= link_to "Index", posts_path %>
+</div>
