--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,49 @@
-<h2>Sign up</h2>
+<div class="section">
+  <div class="columns">
+    <div class="column is-half is-offset-one-quarter">
+      <h2 class="title is-2">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field">
+          <%= f.label :name, class: "label" %>
+          <div class="control">
+            <%= f.text_field :name, class:"input", autofocus: true %>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= f.label :email, class: "label" %>
+          <div class="control">
+            <%= f.email_field :email, class: "input", autofocus: true, autocomplete: "email" %>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= f.label :password, class: "label" %>
+          <% if @minimum_password_length %>
+          <div class="help"><em>(<%= @minimum_password_length %> characters minimum)</em></div>
+          <% end %>
+          <div class="control">
+            <%= f.password_field :password, class: "input", autocomplete: "new-password" %>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, class: "label" %>
+          <div class="control">
+            <%= f.password_field :password_confirmation, class: "input", autocomplete: "new-password" %>
+          </div>
+        </div>
+
+          <div class="control">
+            <%= f.submit "Sign up", class: "button has-background-success-dark has-text-light" %>
+          </div>
+      <% end %>
+
+      <br>
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
