--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,11 @@
 .notification:not(:last-child) {
   margin-bottom: 0;
 }
+
+#error_explanation {
+  color: red;
+}
+
+#error_explanation h2 {
+  font-size: 1.25rem;
+}
