Better format for posts on mobile

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="section">
   <div class="columns is-mobile">
-    <div class="column is-half is-offset-one-quarter">
+    <div class="column is-half-desktop is-full-mobile is-offset-one-quarter-desktop">
       <h1 class="title is-2">Posts</h1>
       <% @posts.each do |post| %>
         <div class="box">
